<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registros">

    <EditText
        android:id="@+id/nombreEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Digite su nombre"
        android:inputType="textPersonName"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edadEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Digite su edad"
        android:inputType="phone"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/ciudadEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="Digite su ciudad"
        android:inputType="textPersonName"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="#D622F6"
        android:text="Guardar"
        android:textSize="24dp" />

</LinearLayout>